samples/_failures_safe/1761552471_a70875_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31b8afc8.c: In function ‘main’:
./samples/SAFE/__tmp_31b8afc8.c:150:5: error: expected expression at end of input
  150 |     if (input.size ==
      |     ^~
./samples/SAFE/__tmp_31b8afc8.c:150:5: error: expected declaration or statement at end of input
